# AssaultHook

./: .gitignore  AssaultCubeStructs.h  AssaultHook.vcxproj  AssaultHook.vcxproj.filters  CMakeLists.txt  CheatEngine.CT  LICENSE  Module.ixx  README.md  ReClass.rcnet  assaulthook.cpp  assaulthook.h  build.sh  clean.sh  dllmain.cpp  framework.h  memory.cpp  memory.h  menu.cpp  menu.h  openGLDraw.h  openGLText.cpp  openGLText.h  rebuild.sh  trampoline_hook.h
res/: CheatEngine.CT
src/: AssaultCubeAddresses.h  AssaultCubeStructs.h  AssaultHook.sln  AssaultHook.vcxproj  AssaultHook.vcxproj.filters  acAddresses.h  acFunctions.cpp  acFunctions.h  acState.cpp  acState.h  acStructs.h  aimbot.cpp  aimbot.h  dllmain.cpp  esp.cpp  esp.h  framework.h  geomatry.cpp  geomatry.h  hack.cpp  hack.h  injector  injector.cpp  injector.vcxproj  log.cpp  log.h  memhack.cpp  memhack.h  memory.cpp  memory.h  menu.cpp  menu.h  openGLDraw.cpp  openGLDraw.h  openGLText.h  system.h  system.lnx.h  system.win.h  trampoline_hook.cpp  trampoline_hook.h
src/Release/: AssaultHook.dll.recipe  AssaultHook.iobj  AssaultHook.ipdb  AssaultHook.vcxproj.FileListAbsolute.txt
src/ac/: acAddresses.h  acFunctions.cpp  acFunctions.h  acState.cpp  acState.h  acStructs.h
src/assaulthook/: main.cpp
src/geometry/: geometry.cpp  geometry.h
src/hacks/: aimbot.cpp  aimbot.h  esp.cpp  esp.h  hack.cpp  hack.h  health.cpp  health.h  memhack.cpp  memhack.h
src/injector/: main.cpp
src/memory-lib/: defines.h  memory.cpp  memory.h  memory.lnx.cpp  memory.lnx.h  memory.win.cpp  (+5 more)
windoof/: AssaultHook.vcxproj
(+44 files in other folders)
